WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
164796
UIScriptController: setting a callback to undefined should unregister it
https://bugs.webkit.org/show_bug.cgi?id=164796
Summary
UIScriptController: setting a callback to undefined should unregister it
Simon Fraser (smfr)
Reported
2016-11-15 14:40:02 PST
UIScriptController: setting a callback to undefined should unregister it
Attachments
Patch
(7.27 KB, patch)
2016-11-15 14:42 PST
,
Simon Fraser (smfr)
dino
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2016-11-15 14:42:40 PST
Created
attachment 294882
[details]
Patch
Simon Fraser (smfr)
Comment 2
2016-11-15 16:25:38 PST
https://trac.webkit.org/changeset/208769
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug