UIScriptController: setting a callback to undefined should unregister it https://bugs.webkit.org/show_bug.cgi?id=164796

Reviewed by Dean Jackson.
Tools:

"Immediate" UI scripts (those that don't schedule any async tasks) should return
immediately, without the need to call uiScriptComplete(). However, this is broken if
an earlier UI script registered a callback (since no-one clears that callback after the
first script completes).

Make possible the workaround of setting the callback to undefined, which previously did
not clear the callback registration.

* TestRunnerShared/UIScriptContext/UIScriptContext.cpp:
(UIScriptContext::registerCallback):
* TestRunnerShared/UIScriptContext/UIScriptContext.h:
* WebKitTestRunner/ios/UIScriptControllerIOS.mm:
(WTR::UIScriptController::platformClearAllCallbacks):

LayoutTests:

* fast/harness/ui-side-script-unregister-callback-expected.txt: Added.
* fast/harness/ui-side-script-unregister-callback.html: Added.

Canonical link: https://commits.webkit.org/182483@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208769 268f45cc-cd09-0410-ab3c-d52691b4dbfc